炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XEle_SetZOrderEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetZOrderEx(int hEle, int hDestEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetZOrder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetZOrder(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetTopmost", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetTopmost(int hEle, bool bTopmost);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableCSS", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableCSS(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetCssName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetCssName(int hEle, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetCssName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern string GetCssName(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_ShowEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void ShowEle(int hEle, bool bShow);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetType(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetHWND", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetHWND(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetHWINDOW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetHWINDOW(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetCursor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetCursor(int hEle, int hCursor);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetCursor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetCursor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetID(int hEle, int nID);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetID(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetUID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetUID(int hEle, int nUID);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetUID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetUID(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetParentEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetParentEle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetParent", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetParent(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetTextColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetTextColor(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetTextColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetTextColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetFocusBorderColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetFocusBorderColor(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetFocusBorderColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetFocusBorderColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetFont(int hEle, int hFontx);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetFont(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetAlpha", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetAlpha(int hEle, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChildCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildByIndex", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChildByIndex(int hEle, int index);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildByID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChildByID(int hEle, int nID);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildShapeCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChildShapeCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetChildShapeByIndex", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChildShapeByIndex(int hEle, int index);

        [DllImport("xcgui.dll", EntryPoint = "XEle_HitChildEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int HitChildEle(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XEle_BindLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void BindLayoutObject(int hEle, int hLayout);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetParentLayoutObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetParentLayoutObject(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetUserData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetUserData(int hEle, int nData);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetUserData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetUserData(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetContentSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetContentSize(int hEle, SIZE* pSize);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetCapture", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetCapture(int hEle, bool b);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetLayoutWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetLayoutWidth(int hEle, int nType, int nWidth);

        [DllImport("xcgui.dll", EntryPoint = "XEle_SetLayoutHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetLayoutHeight(int hEle, int nType, int nHeight);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetLayoutWidth(int hEle, int pType, int pWidth);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetLayoutHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetLayoutHeight(int hEle, int pType, int pHeight);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RedrawEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RedrawEle(int hEle, bool bImmediate);

        [DllImport("xcgui.dll", EntryPoint = "XEle_RedrawRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RedrawRect(int hEle, RECT* pRect, bool bImmediate);

        [DllImport("xcgui.dll", EntryPoint = "XEle_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Destroy(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkBorder(int hEle, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkFill(int hEle, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XEle_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkImage(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetBkInfoCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void ClearBkInfo(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetBkInfoManager", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetBkInfoManager(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_GetStateFlags", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetStateFlags(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XEle_DrawFocus", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool DrawFocus(int hEle, int hDraw, RECT pRect);

        [DllImport("xcgui.dll", EntryPoint = "XEle_DrawEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void DrawEle(int hEle, int hDraw);

        [DllImport("xcgui.dll", EntryPoint = "XEle_EnableTransparentChannel", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableTransparentChannel(int hEle, bool bEnable);
